--- a/BlazorApp4/Client/wwwroot/index.html
+++ b/BlazorApp4/Client/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -11,15 +11,22 @@
 </head>
 
 <body>
-    <app>Loading...</app>
+  <app>Loading...</app>
 
-    <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
-    <script src="_framework/blazor.webassembly.js"></script>
+  <div id="blazor-error-ui">
+    An unhandled error has occurred.
+    <a href="" class="reload">Reload</a>
+    <a class="dismiss">🗙</a>
+  </div>
+  <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+  <script src="_framework/blazor.webassembly.js"></script>
+
+  <script>
+    window.blazorCulture = {
+      get: () => window.localStorage['BlazorCulture'],
+      set: (value) => window.localStorage['BlazorCulture'] = value
+    };
+  </script>
 </body>
 
 </html>
